# taylor-green-parallel-cfd

./: .gitignore  CMakeLists.txt  Makefile  README.md  advect.h  constants.h  diffuse.h  init.h  main.cu  plotting.h  utils.h
include/: advect.cuh  advect.h  constants.cuh  constants.h  diffuse.cuh  diffuse.h  init.cuh  init.h  plotting.cuh  plotting.h  pressure_correction.cuh  pressure_correction.h  solve.cuh  solve.h  utils.cuh  utils.h
src/: CMakeLists.txt  advect.cu  diffuse.cu  init.cu  main.cu  plotting.cu  pressure_correction.cu  solve.cu  utils.cu
tests/: CMakeLists.txt  test_advection.cu  test_diffusion.cu  test_pressure_correction.cu  test_solve.cu  test_utils.cu
